--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "privatesocial",
+  "name": "private2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://djakuzi.github.io/private/",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
